--- a/templates/user-page.html
+++ b/templates/user-page.html
@@ -3,11 +3,19 @@
 
     <h2>User info</h2>
     <ul>    
-          <li>Age: {{user.}}
-              <a href="/users/{{ user.user_id }}">
-                {{ user.email }} ({{ user.user_id }})
-              </a>
-          </li>
+      <li>Age: {{ user.age }}</li>
+      <li>Zipcode: {{ user.zipcode }}</li>
+    </ul>
+    <br>
+    
+    Movies you've rated:<br>
+
+    <ul>
+      {% for movie_score in movies_scores %}
+        <li>
+            {{ movie_score[0] }}: {{ movie_score[1] }}
+        </li>
+      {% endfor %}
     </ul>
 
 {% endblock %}
