trying to redirect after adding rating

--- a/templates/sign-in_form.html
+++ b/templates/sign-in_form.html
@@ -16,6 +16,6 @@
 	{% endfor %}
 </p>
 
-<a href="/registration-form">Click here to register</a>
+<a href="/register">Click here to register</a>
 
 {% endblock %}
