--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-  Ratings							<a href="/Logout">Logout</a>
+  Ratings <a href="/">Home</a> <a href="/register">Register</a> <a href="/sign-in">Sign In</a> <a href="/Logout">Logout</a>
   <hr>
 
   {% block content %} put your content here {% endblock %}
